force-app/main/default/objects/Supplier__x/Supplier__x.object-meta.xml
<CustomObject>
    <description>Suppliers</description>
    <externalDataSource>tesData</externalDataSource>
    <externalName>Suppliers</externalName>
    <label>Supplier</label>
    <pluralLabel>Suppliers</pluralLabel>
</CustomObject>