force-app/main/default/objects/Supplier__x/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>CompanyName</description>
    <externalDeveloperName>CompanyName</externalDeveloperName>
    <label>CompanyName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>