force-app/main/default/objects/Supplier__x/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <description>ContactName</description>
    <externalDeveloperName>ContactName</externalDeveloperName>
    <label>ContactName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>