force-app/main/default/objects/Supplier__x/fields/ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactTitle__c</fullName>
    <description>ContactTitle</description>
    <externalDeveloperName>ContactTitle</externalDeveloperName>
    <label>ContactTitle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>