force-app/main/default/objects/Supplier__x/fields/HomePage__c.field-meta.xml
<CustomField>
    <fullName>HomePage__c</fullName>
    <description>HomePage</description>
    <externalDeveloperName>HomePage</externalDeveloperName>
    <label>HomePage</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>